# typst-hunspell

./: .gitmodules  Cargo.toml
src/: check.rs  checker.rs  main.rs  output.rs
