[package]
name = "typst-hunspell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = { version = "0.9.2", features = ["color"] }
clap = { version = "4.3.21", features = ["derive"] }
hunspell-rs = { version = "0.4", features = ["bundled"] }
notify = "6.0.1"
notify-debouncer-mini = "0.3.0"
serde = "1.0.183"
serde_json = "1.0.104"
substring = "1.4.5"
thiserror = "1.0.50"
typst-syntax = { git = "https://github.com/typst/typst.git", tag="v0.9.0" }
