[package]
name = "typst-hunspell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = { version = "0.9", features = ["color"] }
clap = { version = "4.3", features = ["derive"] }
notify = "6.0"
notify-debouncer-mini = "0.4"
serde = "1.0"
serde_json = "1.0"
substring = "1.4"
thiserror = "1.0"
typst-syntax = { git = "https://github.com/typst/typst.git", tag="v0.9.0" }
zspell = { version = "0.5", features = ["unstable-suggestions"] }
